[package]
name = "koncord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = { version = "1.26.1", features = ["std", "serde-with-str"] }
serde = { version = "1.0.144", features = ["derive"] }
